# swayBGChanger

./: CHANGELOG.org  README.org  builder.sh  default.nix  flake.nix  swayBGChanger.sh  swaybgchanger.cabal
app/: Main.hs
src/: Lib.hs  Parser.hs
